--- a/assig1/app/src/main/AndroidManifest.xml
+++ b/assig1/app/src/main/AndroidManifest.xml
@@ -20,5 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddCatActivity" />
+        <activity android:name=".VoteActivity"></activity>
     </application>
+
 </manifest>
