--- a/assig3/app/build.gradle
+++ b/assig3/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     //FusedLocationProviderClient
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
