--- a/assig3/app/build.gradle
+++ b/assig3/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     //FusedLocationProviderClient
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.5'
+
+    //Google Firebase ML
+    implementation 'com.google.firebase:firebase-ml-vision:18.0.1'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
