--- a/assig3/app/build.gradle
+++ b/assig3/app/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile 'org.tensorflow:tensorflow-lite:+'
+    implementation 'org.tensorflow:tensorflow-lite:+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
